--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     font-family:"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;   /*フォント種類*/
     font-size: 16px;    /*文字サイズ*/
     line-height: 2;     /*行間*/
-    background: linear-gradient(-135deg, #9b1218, #FFFFFF);
+    background: linear-gradient(-135deg, #9b1218, #FFDFDF);
     background-attachment: fixed;
     -webkit-text-size-adjust: none;
 }
@@ -280,6 +280,8 @@ footer .pr {
 #activity p.activity-h {
     font-size: 18px;
     margin-bottom: 10px;
+    background-color: #bb6268;
+    border-radius: 10px 10px 10px 10px;
     border-top: 1px solid #111;
     border-bottom: 1px solid #111;
 }
